refactor: use a remote mcp server

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-# Configurações da API
-API_BASE_URL=http://localhost:8000
-
-# Configurações do Google AI
+# Google AI Settings
 GOOGLE_API_KEY=your_google_api_key_here
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
+
+
+# MCP Server settings
+MCP_SERVER_URL=http://host.docker.internal
+MCP_SERVER_PORT=8001
