--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - GOOGLE_GENAI_USE_VERTEXAI=FALSE
+      - MCP_SERVER_URL=http://host.docker.internal
+      - MCP_SERVER_PORT=8001
     volumes:
       - ./src:/app/src
     ports:
